# retail-api

./: README.md  pyproject.toml
retailer/: db.sqlite3
retailer/retailAPI/: admin.py  apps.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
retailer/retailAPI/migrations/: 0001_initial.py
retailer/retailer/: asgi.py  settings.py  urls.py  wsgi.py
